<resources>
    <string name="app_name">JustJava_ViewBinding</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="order_summary">Order Summary</string>
    <string name="_0">$0</string>
    <string name="order">Order</string>
</resources>